--- a/index.php/about.html
+++ b/index.php/about.html
@@ -66,18 +66,8 @@ function flexResp() {
 }
 };
 //]]>
-</script>  <!-- Piwik --> <script type="text/javascript">
-  var _paq = _paq || [];
-  _paq.push(['trackPageView']);
-  _paq.push(['enableLinkTracking']);
-  (function() {
-    var u="//www.jbmlogic.com/analytics/piwik/";
-    _paq.push(['setTrackerUrl', u+'piwik.php']);
-    _paq.push(['setSiteId', '3']);
-    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
-    g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
-  })();
-</script> <!-- End Piwik Code -->  	<script type="text/javascript">
+</script>
+<script type="text/javascript">
 		window.WPCOM_sharing_counts = {"http:\/\/blog.jbmlogic.com\/index.php\/about\/":2};
 	</script> 				<script type='text/javascript' src='./../js/lts-comment-reply.min.js'></script> <script type='text/javascript'>
 /* <![CDATA[ */
